# DoenetML

./: .git-blame-ignore-revs  .gitignore  .prettierignore  .prettierignoreci  AGENTS.md  CLAUDE.md  CORE_REFACTOR_DEFERRED.md  Cargo.toml  DEPENDENCIES_REFACTOR_DEFERRED.md  README.md  TEST_RUN_INSTRUCTIONS_FOR_AGENTS.md  conversions.txt  copilot-session-807b9cd6-d9bc-4ef6-978a-cbaff89b1249.md  copilot-session-919b63dd-f8e4-4d20-9e48-ec5d3e119fce.md  cypress.config.js  description-corrections-needed.md  flaws.txt  hmm.doenet  index-1.html  index.html  index.js  missing-descriptions-deferred.md  package-lock.json  package.json  prefigure-auto-sliders-handoff.md  refactor-controls-logic.md  refactor-renderer-drag-handlers.md  rollup.config.js  state_var_notes.rs  todiscuss.txt  totest.txt  tsconfig.build.json  tsconfig.test.json  vite.config.js
.changeset/: README.md  accessibility-report-docs-link.md  add-children-more-parents.md  add-controls-generalized.md  (+181 more)
core/: Cargo.toml
core/core-derive/: Cargo.toml
core/core-derive/src/: lib.rs
core/src/: boolean.rs  component.rs  component_prelude.rs  document.rs  lib.rs  number.rs  parse_json.rs  prelude.rs  state_var.rs  state_variable_setup.rs  state_variables.rs  text.rs  text_input.rs  utils.rs
core/src/component/: boolean.rs  boolean_input.rs  document.rs  number.rs  number_input.rs  p.rs  sequence.rs  text.rs  text_input.rs
core/tests/: integration_tests.rs
doenet-core/: Cargo.toml
doenet-core/benches/: my_benchmark.rs
doenet-core/core-derive/: Cargo.toml
doenet-core/core-derive/src/: lib.rs
doenet-core/src/: base_definitions.rs  component.rs  lib.rs  math_expression.rs  parse_json.rs  prelude.rs  state.rs  state_var.rs  state_variables.rs  utils.rs
doenet-core/src/component/: boolean.rs  boolean_input.rs  collect.rs  conditional_content.rs  document.rs  graph.rs  line.rs  map.rs  number.rs  number_input.rs  p.rs  point.rs  section.rs  sequence.rs  sources.rs  template.rs  text.rs  text_input.rs
rust/doenet-core/: Cargo.toml
rust/doenet-core/src/component/: boolean_input.rs  case.rs  number_input.rs  p.rs  point.rs  sequence.rs
(+433 files in other folders)
