[package]
name = "core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core-derive = { path = "core-derive" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
