[package]
name = "doenet-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# core-derive = { path = "core-derive" }
lazy_static = "1.4.0"
# phf = { version = "0.10", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5"
wasm-bindgen = {version = "0.2.81", features = ["serde-serialize"], optional = true}
web-sys = {version = "0.3", features = ["console"], optional = true}
evalexpr = "8.1.0"



[features]
# The web feature makes the log! macro additionally go to web-sys:console
web = ["dep:web-sys", "dep:wasm-bindgen"]